cedar-lean/UnitTest/parser_tests/negative/number_as_entity_type.cedar
permit(principal == 123::"alice", action, resource);
